# aiti_guru-test_task

./: .dockerignore  Makefile  README.md  pyproject.toml
app/: config.py  migrations.py
app/api/: __main__.py
app/api/v1/: __init__.py
app/api/v1/views/orders/: views.py
app/migrations/: 0001.initial.sql  0002.change_status_trigger.sql  0003.category_closure_trigger.sql  0004.top5last30days.sql  0005.populate_tables.sql
app/repository/: exceptions.py  helpers.py  models.py  provider.py  repository.py  repository_controller.py
app/repository/orders/: __init__.py  exceptions.py  models.py  repository.py
deployments/: docker-compose.dev.yml
deployments/app/: Dockerfile
